--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.data.rest.base-path=/api/v1
+
 logging.level.org.hibernate.jpa=DEBUG
 spring.datasource.url=jdbc:h2:mem:inventory
 spring.jpa.show-sql=true
