--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <java.version>1.8</java.version>
+    <java.compiler.source>1.8</java.compiler.source>
+    <java.compiler.target>1.8</java.compiler.target>
+
+    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 
     <lombok.version>1.16.18</lombok.version>
 
@@ -28,6 +32,15 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <source>${java.compiler.source}</source>
+          <target>${java.compiler.target}</target>
+        </configuration>
+      </plugin>
       <!-- use the spring-boot-maven-plugin to package the project as an executable jar -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
