--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <h2.version>1.4.196</h2.version>
     <querydsl.version>4.1.3</querydsl.version>
 
+    <slf4j.version>1.7.25</slf4j.version>
     <thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
     <rest.assured.version>3.1.0</rest.assured.version>
   </properties>
@@ -108,6 +109,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
       <version>${spring-boot.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
     </dependency>
     <dependency>
       <groupId>org.thymeleaf</groupId>
